--- a/business-card/index.html
+++ b/business-card/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="image" src="images/software-enginee.png">
+            <img class="image" src="https://media.istockphoto.com/id/1342829261/vector/software-developer-semi-flat-color-vector-character.jpg?s=612x612&w=0&k=20&c=RRatI_ThaXwbHUde2PpXo_Fz-VThPWbkRsfAcDqDgnQ=">
             <div class="text">
                 <h2>Lama Bugis</h2>
                 <h5>Computer Science student at UQU</h5>
