practice flex on birthday card

--- a/business-card/index.html
+++ b/business-card/index.html
@@ -1,10 +1,11 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="styles.css" />
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <link rel="stylesheet" href="style.css" />
     </head>
     <body>
         <div class="card">
-            <img class="image" src="https://media.istockphoto.com/id/1342829261/vector/software-developer-semi-flat-color-vector-character.jpg?s=612x612&w=0&k=20&c=RRatI_ThaXwbHUde2PpXo_Fz-VThPWbkRsfAcDqDgnQ=">
+            <img class="image" src="https://www.simform.com/banner.png">
             <div class="text">
                 <h2>Lama Bugis</h2>
                 <h5>Computer Science student at UQU</h5>
