edit birthday card

--- a/birthday-card/index.html
+++ b/birthday-card/index.html
@@ -8,9 +8,12 @@
         <title>Happy Birthday !</title>
     </head>
     <body>
-        <h1>Today is Nouf's birthday 🎉</h1>
-        <img id="avatar" src="birthday.jpeg">
-        <h2>26 years old</h2>
-        <h3>15/09/1444</h3>
+        <div id="header">    
+            <h1>Today is Lama's birthday 🎉</h1>
+            <img id="avatar" src="birthday2.jpeg">
+            <h2 id="age">26 years old</h2>
+            <h3 id="date">15/09/1444</h3>
+        </div>
+
     </body>
 </html>
